[project]
name = "study-mode-clone"
version = "0.1.0"
description = "AI-powered Study Mode application with Mixture of Experts approach using Google AI Studio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "asyncio-mqtt>=0.11.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-extensions>=4.7.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "scikit-learn>=1.3.0"
]
